# intel_pimc_fine_tune

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md
input/: atomperms_fr.ch4  binning.in.ch4  fort.11  interp.in.ch4  iseed.in  pimc.in  pot.402  run.sh  system.in.ch4
src/Potentials/MSI/: new_copy.int
